# eat-db

./: Dockerfile  README.md  pyproject.toml  setup.cfg  tasks.py
eat_db/: __init__.py  __main__.py  db.py  models.py
eat_db/api/: __init__.py  main.py
eat_db/database/: __init__.py  mongo.py
tests/: test_eat_db.py
