[tool.poetry]
name = "eat-db"
version = "0.0.1"
description = ""
authors = ["Gabriel <gabriel59kg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blue-chip = "*"
email-validator = "*"
fastapi = "^0.47.1"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
black = "19.10b0"
pytest = "^5.2"
uvicorn = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
