[tool.isort]
line_length = 88
known_first_party = "eat_db"
import_heading_firstparty = "project"
atomic = "True"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
verbose = "False"

[tool.poetry]
name = "eat-db"
version = "0.0.1"
description = ""
authors = ["Gabriel <gabriel59kg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
email-validator = "*"
fastapi = "^0.47.1"
isort = "^4.3.21"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
blue-chip = "^0.0.7"
pytest = "^5.2"
requests = "*"
uvicorn = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
