[tool.isort]
atomic = "True"
force_grid_wrap = 0
import_heading_firstparty = "project"
include_trailing_comma = "True"
known_first_party = "eat_db"
known_third_party = "invoke,pkg_resources"
line_length = 88
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
use_parentheses = "True"
verbose = "False"

[tool.poetry]
authors = ["Gabriel <gabriel59kg@gmail.com>"]
description = ""
name = "eat-db"
version = "0.0.1"

[tool.poetry.dependencies]
email-validator = "*"
fastapi = "^0.47.1"
isort = "^4.3.21"
pymongo = {version = "^3.10.1", extras = ["tls"]}
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "19.10b0"
blue-chip = "^0.0.7"
mongomock = "*"
pytest = "^6.0"
requests = "*"
uvicorn = "*"

[tool.pytest]
addopts = "-rEfs"
log_cli_level = "INFO"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
